--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 * {
   box-sizing: border-box;
 }
+
+body,
 html {
   height: 100%;
-}
-
-body {
   background: #669900;
 }
 
@@ -15,10 +14,10 @@ h1 {
 
 .meme-container {
   position: relative;
-  min-height: 600px;
-  min-width: 600px;
+  /* min-width: 600px;
+  min-height: 600px; */
   width: 100%;
-  height: 100%;
+  height: 0;
   background-image: url('');
   background-repeat: no-repeat;
   background-position: center center;
@@ -48,4 +47,9 @@ h1 {
 
 .bottom_text_container {
   bottom: 7%;
+}
+
+button {
+  margin: 7px 0;
+  min-width: 180px;
 }
