--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ h1 {
 
 .meme-container {
   position: relative;
-  /* min-width: 600px;
-  min-height: 600px; */
+  min-width: 600px;
+  min-height: 600px;
   width: 100%;
   height: 0;
   background-image: url('');
